Building information now displayed on appropriate screen. Information from parse.com added to building info screen.

--- a/app/src/main/res/layout/building_information.xml
+++ b/app/src/main/res/layout/building_information.xml
@@ -14,7 +14,7 @@
             android:id="@+id/buildingImageView"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/library"
+            android:src="@mipmap/defaultbuildingimage"
             android:scaleType="centerCrop" />
 
         <Space
