--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,42 +6,58 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#015a92">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@mipmap/augie_logo_256x256"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Campus Tour"
-        android:id="@+id/tourButton"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000" />
+        android:layout_height="fill_parent">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Campus Map"
-        android:id="@+id/mapButton"
-        android:layout_below="@+id/tourButton"
-        android:layout_alignLeft="@+id/tourButton"
-        android:layout_alignStart="@+id/tourButton"
-        android:layout_marginTop="33dp"
-        android:background="#00000000" />
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"
+            android:id="@+id/imageView"
+            android:src="@mipmap/augie_logo_1000x1000"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitCenter" />
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Events"
-        android:id="@+id/eventsButton"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/mapButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#00000000" />
+        <Space
+            android:layout_width="20px"
+            android:layout_height="20px" />
+
+        <Space
+            android:layout_width="20px"
+            android:layout_height="20px" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Campus Tour"
+            android:id="@+id/tourButton"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            android:background="#00000000" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Campus Map"
+            android:id="@+id/mapButton"
+            android:layout_below="@+id/tourButton"
+            android:layout_alignLeft="@+id/tourButton"
+            android:layout_alignStart="@+id/tourButton"
+            android:layout_marginTop="33dp"
+            android:background="#00000000" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Events"
+            android:id="@+id/eventsButton"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/mapButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="#00000000" />
+    </LinearLayout>
+
 </RelativeLayout>
