--- a/app/src/main/res/layout/events_layout.xml
+++ b/app/src/main/res/layout/events_layout.xml
@@ -21,19 +21,10 @@
             android:src="@mipmap/augie_logo_256x256" />
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="fill_parent"
+    <ListView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/info"
-            android:layout_below="@+id/relativeLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="109dp" />
-    </ScrollView>
+        android:id="@+id/eventListView"
+        android:layout_below="@+id/relativeLayout" />
 
 </RelativeLayout>
