--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -14,7 +14,8 @@
             android:typeface="sans"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:paddingLeft="10dp" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"/>
 
         <TextView
             android:id="@+id/eventDate"
@@ -22,7 +23,8 @@
             android:layout_height="wrap_content"
             android:typeface="sans"
             android:paddingBottom="10dp"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="20dp"
+            android:paddingRight="10dp"/>
 
         <TextView
             android:id="@+id/eventDescription"
@@ -30,7 +32,8 @@
             android:layout_height="wrap_content"
             android:typeface="sans"
             android:paddingBottom="10dp"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="20dp"
+            android:paddingRight="10dp" />
     </LinearLayout>
 
 
