--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,17 +61,16 @@
 
     </LinearLayout>
 
-    <ImageButton
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
         android:id="@+id/helpButton"
-        android:layout_gravity="right"
-        android:layout_weight="1"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:background="@null"
         android:src="@mipmap/question"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:text="Help" />
 
 </RelativeLayout>
